--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "./dist/index.js",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "spotify-uri": "^4.0.1",
     "spotify-url-info": "^3.2.13",
     "spotify-web-api-node": "^5.0.2",
@@ -18,6 +19,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@discordjs/voice": "^0.16.1",
     "@jest/globals": "^29.7.0",
+    "@types/bluebird": "^3.5.42",
     "@types/spotify-web-api-node": "^5.0.11",
     "commitlint": "^19.2.1",
     "discord.js": "^14.14.1",
