--- a/package.json
+++ b/package.json
@@ -75,9 +75,9 @@
     "prettier": "prettier --write \"**/*.{js,ts,json,yml,yaml,md}\"",
     "build": "tsup",
     "build:check": "tsc --noEmit",
-    "update": "ncu -u && bun update",
+    "update": "ncu -u && npm update",
     "postinstall": "npx husky install",
-    "prepack": "bun run build && pinst -d",
+    "prepack": "npm run build && pinst -d",
     "postpack": "pinst -e"
   },
   "typings": "./dist/index.d.ts"
