--- a/.github/workflows/daily_test.yml
+++ b/.github/workflows/daily_test.yml
@@ -29,7 +29,8 @@ jobs:
           bun-version: latest
 
       - name: Install dependencies
-        run: bun install --frozen-lockfile
+        run: bun install
+        #run: bun install --frozen-lockfile
 
       - name: Run tests
         run: bun run test
