--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "build": "tsup",
     "build:check": "tsc --noEmit",
     "update": "ncu -u && bun update",
-    "postinstall": "npx husky install",
+    "postinstall": "npx husky install && npm run build",
     "prepack": "bun run build && pinst -d",
     "postpack": "pinst -e"
   },
