--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "./dist/index.js",
   "dependencies": {
+    "typescript": "^5.4.2",
     "bluebird": "^3.7.2",
     "spotify-uri": "^4.0.1",
     "spotify-url-info": "^3.2.13",
