--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "lint:fix": "eslint . --fix",
     "prettier": "prettier --write \"**/*.{js,ts,json,yml,yaml,md}\"",
     "build": "tsup",
-    "build:postinstall": "npm install typescript@5.4.2 tsup@8.0.2 && tsup src/index.ts",
+    "build:postinstall": "npm install && tsup",
     "build:check": "tsc --noEmit",
     "update": "ncu -u && bun update",
     "postinstall": "npx husky install && npm run build:postinstall",
